// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NavItem renders active 1`] = `
<div
  className="navBar__item nav-item"
  ref={null}
>
  <a
    className="nav-link active"
    data-cy="navBarLinknamewithemptyspace"
    href="link"
  >
    name with empty space
  </a>
</div>
`;

exports[`NavItem renders default (inactive) 1`] = `
<div
  className="navBar__item nav-item"
  ref={null}
>
  <a
    className="nav-link"
    data-cy="navBarLinkname"
    href="link"
  >
    name
  </a>
</div>
`;
